--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
 
-body{
-    background: #d3d3d3;
+#banner{
+    width: 100%;
 }
 
+.principal{
+    background: #d3d3d3;
+    }
 h1{
     text-align: center;
-            
-  }
+                
+ }
 p{
     text-align: center;
- }
+}
  #mission{
     font-size: 20px;
  }
 em strong{
     color:red;
+}
+
+.itens{
+    font-style: italic;
+}
+
+.beneficios{
+    background: #FFFFFF
+}
+h2{
+    text-align: center;   
 }
