--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
+.principal-head{
+    padding-left: 20px;
+}
 
 #banner{
     width: 100%;
 }
 
+.headers{
+    text-align: center;
+  }
+  
 .principal{
     background: #d3d3d3;
+    padding: 30px;
     }
-h1{
-    text-align: center;
-                
- }
+
 p{
     text-align: center;
 }
@@ -25,8 +30,18 @@ em strong{
 }
 
 .beneficios{
-    background: #FFFFFF
+    background: #FFFFFF;
+    padding: 20px;
 }
-h2{
-    text-align: center;   
+
+ul{
+   display: inline-block;
+   vertical-align: top;
+   width: 20%;
+   margin-right: 15%;
+}
+
+.imagemDosBeneficios{
+
+    width: 50%;
 }
