--- a/style.css
+++ b/style.css
@@ -1,47 +1,93 @@
-.principal-head{
-    padding-left: 20px;
+header{
+    background-color: #BBBBBB;
+    padding: 20px 0;
 }
 
-#banner{
-    width: 100%;
+.caixa{
+    position: relative;
+    width: 950px;
+    margin: 0 auto;
 }
 
-.headers{
+nav{
+    position:absolute;
+    top: 110px;
+    right:0;        
+}
+
+nav li{
+    display: inline;
+    margin-left: 0015px;
+}
+
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+
+}
+
+nav a:hover{
+    color: #C78C19;
+    text-decoration: underline;
+    font-size: 23px;
+
+}
+
+.products {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.products li{
+    display: inline-block;
     text-align: center;
-  }
-  
-.principal{
-    background: #d3d3d3;
-    padding: 30px;
-    }
+    width: 29%;
+    vertical-align: top;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    margin: 1.5%;
+}
 
-p{
+.products li:hover{
+    border-color: #C78C19;
+}
+.products li:hover h2{
+    font-size: 35px;
+}
+
+.products li:active{
+    border-color: rgb(64, 128, 128);
+}
+
+.products h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.products p{
+    font-size: 18px;
+    padding: 10px 20px;
+
+}
+
+.products strong{
+    font-size: 22px;
+    font-weight: bold;
+    
+}   
+
+footer{
     text-align: center;
-}
- #mission{
-    font-size: 20px;
- }
-em strong{
-    color:red;
+    background: url("bg.jpg");
+    padding: 40px 0;
 }
 
-.itens{
-    font-style: italic;
-}
-
-.beneficios{
-    background: #FFFFFF;
-    padding: 20px;
-}
-
-ul{
-   display: inline-block;
-   vertical-align: top;
-   width: 20%;
-   margin-right: 15%;
-}
-
-.imagemDosBeneficios{
-
-    width: 50%;
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
 }
